--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="shopping-cart.html" class="cart"><img src="img/cart.png" alt="cart"></a>
         <a class="account" href="#">My Account</a>
         <div class="login-drop">
-          <div class="login-drop-box">
+          <!-- <div class="login-drop-box">
             <img src="img/cart_img_1.jpg" alt="rebox zane">
             <div class="login-drop-text">
               <h3>Rebox Zane</h3>
@@ -81,6 +81,8 @@
             </div>
             <button class="delete"><i class="fas fa-times-circle"></i></button>
           </div>
+
+
           <div class="login-drop-box">
             <img src="img/cart_img_2.jpg" alt="rebox zane">
             <div class="login-drop-text">
@@ -95,10 +97,10 @@
               <p>1  x   $250</p>
             </div>
             <button class="delete"><i class="fas fa-times-circle"></i></button>
-          </div>
+          </div> -->
           <div class="drop-box">
             <p>TOTAL</p>
-            <p>$500.00</p>
+            <p id="total">$500.00</p>
           </div>
           <a href="checkout.html" class="login-btn">Checkout</a>
           <a class="login-btn" href="shopping-cart.html">Go to cart</a>
